fix: add css styling to truncate long strings

--- a/src/styles/isomer-cms/pages/Sites.module.scss
+++ b/src/styles/isomer-cms/pages/Sites.module.scss
@@ -84,7 +84,7 @@
             margin-bottom: 5px;
           }
 
-          .siteDate{
+          .siteInfo{
             width: 100%;
             font-weight: 300;
             color: $body-grey;
